--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
-    "firebase": "^11.3.1"
+    "express": "^4.21.2",
+    "firebase": "^11.3.1",
+    "nodemailer": "^6.10.0"
   }
 }
